2023-11-18T00:44:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6910635341 # 2093
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-18
* notice: last 14d: unq all: 1 15
* notice: prev accum: outdated-unq outdated-all / unq all: 793 1461 / 802 1478
* notice: next accum: outdated-unq outdated-all / unq all: 794 1463 / 802 1478
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-03] / []

2023-11-17T00:45:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6898333493 # 2090
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-17
* notice: last 14d: unq all: 1 17
* notice: prev accum: outdated-unq outdated-all / unq all: 792 1459 / 802 1478
* notice: next accum: outdated-unq outdated-all / unq all: 793 1461 / 802 1478
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-02] / []

2023-11-16T00:46:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6884753716 # 2087
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-16
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 789 1454 / 802 1478
* notice: next accum: outdated-unq outdated-all / unq all: 792 1459 / 802 1478
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-01] / []

2023-11-15T00:45:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6871366707 # 2084