@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-18T00:44:16Z",
-  "count_outdated" : 1463,
-  "uniques_outdated" : 794,
-  "count" : 1478,
-  "uniques" : 802,
+  "timestamp" : "2023-11-19T00:50:01Z",
+  "count_outdated" : 1465,
+  "uniques_outdated" : 795,
+  "count" : 1479,
+  "uniques" : 803,
   "clones" : [
-    {
-      "timestamp": "2023-11-04T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-05T00:00:00Z",
       "count": 2,
@@ -70,6 +61,15 @@
     },
     {
       "timestamp": "2023-11-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
