@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 14,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2023-11-04T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-11-05T00:00:00Z",
       "count": 2,
@@ -39,6 +34,11 @@
     },
     {
       "timestamp": "2023-11-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
