@@ -1,3 +1,12 @@
+2023-11-19T00:50:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6917315230 # 2096
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-19
+* notice: last 14d: unq all: 1 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 794 1463 / 802 1478
+* notice: next accum: outdated-unq outdated-all / unq all: 795 1465 / 803 1479
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-11-04] / [2023-11-18]
+
 2023-11-18T00:44:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6910635341 # 2093
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-18
